# NDKDemo

./: README.md
app/: .gitignore  build.gradle
app/src/androidTest/java/com/wzz/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wzz/ndkdemo/: JNITest.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wzz/ndkdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
